--- a/src/main/resources/templates/blocks/nav.html
+++ b/src/main/resources/templates/blocks/nav.html
@@ -10,7 +10,7 @@
 </div>-->
 
 <div class="p-3 mb-3">
-    <div class="container">
+    <div class="container border-bottom">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a th:href="@{/}" class="nav-link px-2 link-secondary text-light"><i class="bi bi-newspaper text-light" style="font-size: 30px"></i> Новости</a></li>
@@ -38,7 +38,7 @@
                         <li><a class="dropdown-item" th:href="@{/admin/news}">Работа с новостями</a></li>
                         <li><a class="dropdown-item" th:href="@{/admin/catalog}">Работа с категориями</a></li>
                         <li><a class="dropdown-item" th:href="@{/admin/products}">Работа с продуктами</a></li>
-                        <!--<li><a class="dropdown-item" th:href="@{/logout}">Выход</a></li>-->
+                        <li><a class="dropdown-item" th:href="@{/logout}">Выход</a></li>
                     </ul>
                 </div>
             </div>
