--- a/src/main/resources/templates/about/detail.html
+++ b/src/main/resources/templates/about/detail.html
@@ -12,15 +12,24 @@
     <header th:insert="~{blocks/header}"></header>
     <nav th:insert="~{blocks/nav}"></nav>
     <main>
-      <b>
-        <p>Бар Стоп кран</p>
-        <p>Новотушинский пр., 8к1</p>
-        <p>◾24 крана классики, крафта и импорта</p>
-        <p>◾ламповая атмосфера</p>
-        <p>◾место для друзей и их друзей</p>
-        <p>Тот самый бар "на районе", куда приходишь, как к себе домой</p>
-      </b>
-      <br>
+
+      <div class="album py-5 bg-body-tertiary">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <b>
+                <p>Бар Стоп кран</p>
+                <p>Новотушинский пр., 8к1</p>
+                <p>◾24 крана классики, крафта и импорта</p>
+                <p>◾ламповая атмосфера</p>
+                <p>◾место для друзей и их друзей</p>
+                <p>Тот самый бар "на районе", куда приходишь, как к себе домой</p>
+              </b>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
     <footer th:insert="~{blocks/footer}"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
