--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -12,14 +12,21 @@
         <header th:insert="~{blocks/header}"></header>
         <nav th:insert="~{blocks/nav}"></nav>
         <main>
-            <h1>Авторизация пользователя</h1>
-            <form th:method="POST" th:action="@{/login}" id="loginForm">
-                <label for="username">Имя пользователя: </label>
-                <input type="text" name="username" id="username" /><br/>
-                <label for="password">Пароль: </label>
-                <input type="password" name="password" id="password" /><br/>
-                <input type="submit" value="Вход"/>
-            </form>
+            <div class="album py-5 bg-body-tertiary">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <form th:method="POST" th:action="@{/login}" id="loginForm">
+                                <label for="username">Имя пользователя: </label><br>
+                                <input type="text" name="username" id="username" /><br/>
+                                <label for="password">Пароль: </label><br>
+                                <input type="password" name="password" id="password" /><br/><br>
+                                <input type="submit" value="Вход"/>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer th:insert="~{blocks/footer}"></footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
