--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -12,13 +12,19 @@
         <header th:insert="~{blocks/header}"></header>
         <nav th:insert="~{blocks/nav}"></nav>
         <main>
-            <hr>
-            <h1>Администратор бара</h1>
-            <hr>
-            <a th:href="@{/admin/news}">Работа с новостями</a><br>
-            <a th:href="@{/admin/catalog}">Работа с категориями меню</a><br>
-            <a th:href="@{/admin/products}">Работа с продуктами</a>
-            <hr>
+            <div class="album py-5 bg-body-tertiary">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>Администратор бара</h1>
+                            <hr>
+                            <a th:href="@{/admin/news}">Работа с новостями</a><br>
+                            <a th:href="@{/admin/catalog}">Работа с категориями меню</a><br>
+                            <a th:href="@{/admin/products}">Работа с продуктами</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer th:insert="~{blocks/footer}"></footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
