--- a/src/main/resources/templates/admin/news-maker.html
+++ b/src/main/resources/templates/admin/news-maker.html
@@ -12,33 +12,45 @@
         <header th:insert="~{blocks/header}"></header>
         <nav th:insert="~{blocks/nav}"></nav>
         <main>
-            <div>
-                <hr>
-                <h2>Работа с новостями</h2>
-                <hr>
+            <div class="d-flex gap-2 justify-content-center py-5" th:if="${pageTotal}!=0">
+                <a th:href="@{/admin}">
+                    <button class="btn btn-outline-secondary d-inline-flex align-items-center" type="button" th:text="Вернуться">
+                        button
+                        <svg class="bi ms-1" width="20" height="20"><use xlink:href="#arrow-right-short"></use></svg>
+                    </button>
+                </a>
             </div>
-            <div>
-                <a th:href="@{/admin}">Вернуться</a>
-                <hr>
-                <form th:method="POST" th:action="@{/admin/news/add}" th:object="${news}" enctype="multipart/form-data">
-                    <label for="file">Изображение: </label>
-                    <input type="file" accept="image/png" id="file" name="file"><br>
+            <div class="album py-5 bg-body-tertiary">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div>
+                                <h2>Работа с новостями</h2>
+                                <hr>
+                            </div>
+                            <div>
+                                <form th:method="POST" th:action="@{/admin/news/add}" th:object="${news}" enctype="multipart/form-data">
+                                    <label for="file">Изображение: </label><br>
+                                    <input type="file" accept="image/png" id="file" name="file"><br>
 
-                    <label for="name">Название новости: </label>
-                    <input type="text" id="name" th:field="*{name}">
-                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red">Name error</span><br>
+                                    <label for="name">Название новости: </label><br>
+                                    <input type="text" id="name" th:field="*{name}">
+                                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red">Name error</span><br>
 
-                    <label for="annotation">Короткая аннотация: </label>
-                    <input type="text" id="annotation" th:field="*{annotation}">
-                    <span th:if="${#fields.hasErrors('annotation')}" th:errors="*{annotation}" style="color: red">Annotation error</span><br>
+                                    <label for="annotation">Короткая аннотация: </label><br>
+                                    <input type="text" id="annotation" th:field="*{annotation}">
+                                    <span th:if="${#fields.hasErrors('annotation')}" th:errors="*{annotation}" style="color: red">Annotation error</span><br>
 
-                    <label for="content">Содержание: </label>
-                    <textarea id="content" cols="40" rows="20" th:field="*{content}"/>
-                    <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" style="color: red">Content error</span><br>
+                                    <label for="content">Содержание: </label><br>
+                                    <textarea id="content" cols="40" rows="20" th:field="*{content}"/>
+                                    <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" style="color: red">Content error</span><br><br>
 
-                    <input type="submit" value="Подтвердить">
-                </form>
-                <hr>
+                                    <input type="submit" value="Подтвердить">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
         <footer th:insert="~{blocks/footer}"></footer>
