--- a/src/main/resources/templates/admin/product-maker.html
+++ b/src/main/resources/templates/admin/product-maker.html
@@ -12,42 +12,55 @@
         <header th:insert="~{blocks/header}"></header>
         <nav th:insert="~{blocks/nav}"></nav>
         <main>
-            <div>
-                <hr>
-                <h2>Работа с продуктами</h2>
-                <hr>
+            <div class="d-flex gap-2 justify-content-center py-5" th:if="${pageTotal}!=0">
+                <a th:href="@{/admin}">
+                    <button class="btn btn-outline-secondary d-inline-flex align-items-center" type="button" th:text="Вернуться">
+                        button
+                        <svg class="bi ms-1" width="20" height="20"><use xlink:href="#arrow-right-short"></use></svg>
+                    </button>
+                </a>
             </div>
-            <div>
-                <a th:href="@{/admin}">Вернуться</a>
-                <hr>
-                <form th:method="POST" th:action="@{/admin/products/add}" th:object="${product}" enctype="multipart/form-data">
-                    <label for="file">Изображение: </label>
-                    <input type="file" accept="image/png" id="file" name="file"><br>
+            <div class="album py-5 bg-body-tertiary">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div>
+                                <h2>Работа с продуктами</h2>
+                                <hr>
+                            </div>
+                            <div>
+                                <form th:method="POST" th:action="@{/admin/products/add}" th:object="${product}" enctype="multipart/form-data">
+                                    <label for="file">Изображение: </label><br>
+                                    <input type="file" accept="image/png" id="file" name="file"><br>
 
-                    <label for="name">Название продукта: </label>
-                    <input type="text" th:field="*{name}" id="name">
-                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red">Name error</span><br>
+                                    <label for="name">Название продукта: </label><br>
+                                    <input type="text" th:field="*{name}" id="name">
+                                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red">Name error</span><br>
 
-                    <label for="description">Описание продукта: </label>
-                    <input type="text" th:field="*{description}" id="description">
-                    <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" style="color: red">Description error</span><br>
+                                    <label for="description">Описание продукта: </label><br>
+                                    <input type="text" th:field="*{description}" id="description">
+                                    <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" style="color: red">Description error</span><br>
 
-                    <label for="coast">Цена: </label>
-                    <input type="number" th:field="*{coast}" id="coast">
-                    <span th:if="${#fields.hasErrors('coast')}" th:errors="*{coast}" style="color: red">Coast error</span><br>
+                                    <label for="coast">Цена: </label><br>
+                                    <input type="number" th:field="*{coast}" id="coast">
+                                    <span th:if="${#fields.hasErrors('coast')}" th:errors="*{coast}" style="color: red">Coast error</span><br>
 
-                    <label for="select">Категория: </label>
-                    <select id="select" name="select">
-                        <option
-                                th:each="category : ${categoryList}"
-                                th:text="${category.getName()}"
-                                th:value="${category.getId()}"
-                        ></option>
-                    </select>
-                    <br>
-                    <input type="submit" value="Добавить">
-                </form>
-                <hr>
+                                    <label for="select">Категория: </label><br>
+                                    <select id="select" name="select">
+                                        <option
+                                                th:each="category : ${categoryList}"
+                                                th:text="${category.getName()}"
+                                                th:value="${category.getId()}"
+                                        ></option>
+                                    </select>
+                                    <br>
+                                    <br>
+                                    <input type="submit" value="Добавить">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
         <footer th:insert="~{blocks/footer}"></footer>
