--- a/src/main/resources/templates/catalog/menu.html
+++ b/src/main/resources/templates/catalog/menu.html
@@ -12,27 +12,50 @@
     <header th:insert="~{blocks/header}"></header>
     <nav th:insert="~{blocks/nav}"></nav>
     <main>
-      <h2>Меню Бара</h2>
-      <div th:each="cat : ${categories}" th:if="${cat.getId()} == 1">
-        <div th:if="${auth}">
-          <hr>
-          <a th:href="@{/catalog/menu/{menuNumber}(menuNumber=${cat.getId()})}">
-            <img th:src="'data:image/png;base64,' + ${cat.getImage()}" width="10%" height="10%"/>
-            <p th:text="${cat.getName()}"></p>
-            <p th:text="${cat.getDescription()}"></p>
-          </a>
-          <hr>
+
+      <div class="album py-5 bg-body-tertiary">
+        <div class="container">
+
+          <div class="row">
+            <div class="col-md-12" th:each="cat : ${categories}" th:if="${cat.getId()} == 1 and ${auth}">
+              <div class="row g-0 border rounded overflow-hidden flex-md-row mb-8 shadow-sm position-relative">
+                <div class="col p-4 d-flex flex-column position-static">
+                  <h3 class="mb-0" th:text="${cat.getName()}">Featured post</h3>
+                  <p class="card-text mb-auto" th:text="${cat.getDescription()}">Text</p>
+                  <a th:href="@{/catalog/menu/{menuNumber}(menuNumber=${cat.getId()})}" class="icon-link gap-1 icon-link-hover stretched-link">
+                    Посмотреть
+                    <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+                  </a>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                  <img th:src="'data:image/png;base64,' + ${cat.getImage()}" width="200px" height="200px"/>
+                </div>
+              </div>
+              <br>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12" th:each="category : ${categories}" th:if="${category.getId()} != 1">
+              <div class="row g-0 border rounded overflow-hidden flex-md-row mb-8 shadow-sm position-relative">
+                <div class="col p-4 d-flex flex-column position-static">
+                  <h3 class="mb-0" th:text="${category.getName()}">Featured post</h3>
+                  <p class="card-text mb-auto" th:text="${category.getDescription()}">Text</p>
+                  <a th:href="@{/catalog/menu/{menuNumber}(menuNumber=${category.getId()})}" class="icon-link gap-1 icon-link-hover stretched-link">
+                    Посмотреть
+                    <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+                  </a>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                  <img th:src="'data:image/png;base64,' + ${category.getImage()}" width="200px" height="200px"/>
+                </div>
+              </div>
+              <br>
+            </div>
+          </div>
         </div>
       </div>
-      <div th:each="category : ${categories}" th:if="${category.getId()} != 1">
-        <hr>
-        <a th:href="@{/catalog/menu/{menuNumber}(menuNumber=${category.getId()})}">
-          <img th:src="'data:image/png;base64,' + ${category.getImage()}" width="10%" height="10%"/>
-          <p th:text="${category.getName()}"></p>
-          <p th:text="${category.getDescription()}"></p>
-        </a>
-        <hr>
-      </div>
+
     </main>
     <footer th:insert="~{blocks/footer}"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
