--- a/src/main/resources/templates/catalog/product.html
+++ b/src/main/resources/templates/catalog/product.html
@@ -12,20 +12,43 @@
         <header th:insert="~{blocks/header}"></header>
         <nav th:insert="~{blocks/nav}"></nav>
         <main>
-            <hr>
-            <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${lastPage})}">Вернуться</a><br>
-            <a th:href="@{/catalog/product/edit/{id}(id=${product.getId()})}" th:if="${auth}">Редактировать</a>
-            <a th:href="@{/catalog/product/delete/{id}(id=${product.getId()})}" th:if="${auth}">Удалить</a>
-            <hr>
-            <div>
-                <img th:src="'data:image/png;base64,' + ${product.getImage()}" width="300px" height="300px"/>
-                <h2 th:text="${product.getName()}"></h2>
-                <p th:text="${product.getDescription()}"></p>
-                <br>
-                <hr>
-                <p th:text="'Цена: ' + ${product.getCoast()}"></p>
-                <hr>
+
+            <div class="d-flex gap-2 justify-content-center py-5" th:if="${pageTotal}!=0">
+                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${lastPage})}">
+                    <button class="btn btn-outline-secondary d-inline-flex align-items-center" type="button" th:text="Вернуться">
+                        button
+                        <svg class="bi ms-1" width="20" height="20"><use xlink:href="#arrow-right-short"></use></svg>
+                    </button>
+                </a>
+                <a th:href="@{/catalog/product/edit/{id}(id=${product.getId()})}" th:if="${auth}">
+                    <button class="btn btn-outline-secondary d-inline-flex align-items-center" type="button" th:text="Редактировать">
+                        button
+                        <svg class="bi ms-1" width="20" height="20"><use xlink:href="#arrow-right-short"></use></svg>
+                    </button>
+                </a>
+                <a th:href="@{/catalog/product/delete/{id}(id=${product.getId()})}" th:if="${auth}">
+                    <button class="btn btn-outline-secondary d-inline-flex align-items-center" type="button" th:text="Удалить">
+                        button
+                        <svg class="bi ms-1" width="20" height="20"><use xlink:href="#arrow-right-short"></use></svg>
+                    </button>
+                </a>
             </div>
+
+            <div class="album py-5 bg-body-tertiary">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <img th:src="'data:image/png;base64,' + ${product.getImage()}" width="255px" height="255px"/>
+                            <h2 th:text="${product.getName()}"></h2>
+                            <p th:text="${product.getDescription()}"></p>
+                            <br>
+                            <hr>
+                            <p th:text="'Цена: ' + ${product.getCoast()}"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </main>
         <footer th:insert="~{blocks/footer}"></footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
