--- a/src/main/resources/templates/contact/info.html
+++ b/src/main/resources/templates/contact/info.html
@@ -16,11 +16,21 @@
     <header th:insert="~{blocks/header}"></header>
     <nav th:insert="~{blocks/nav}"></nav>
     <main>
-      <p>Бар Стоп Кран</p>
-      <p>Открыто до 00:00</p>
-      <p>+7 (916) 854-09-28</p>
-      <p>Новотушинский пр., 8, корп. 1</p>
-      <div id="map"></div>
+
+      <div class="album py-5 bg-body-tertiary">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <p>Бар Стоп Кран</p>
+              <p>Открыто до 00:00</p>
+              <p>+7 (916) 854-09-28</p>
+              <p>Новотушинский пр., 8, корп. 1</p>
+              <div id="map"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
     <footer th:insert="~{blocks/footer}"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
