--- a/src/main/resources/templates/catalog/product.html
+++ b/src/main/resources/templates/catalog/product.html
@@ -38,7 +38,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <img th:src="'data:image/png;base64,' + ${product.getImage()}" width="255px" height="255px"/>
+                            <img th:src="'data:image/png;base64,' + ${product.getImage()}" width="50%" height="60%"/>
                             <h2 th:text="${product.getName()}"></h2>
                             <p th:text="${product.getDescription()}"></p>
                             <br>
