--- a/src/main/resources/templates/blocks/nav.html
+++ b/src/main/resources/templates/blocks/nav.html
@@ -35,6 +35,7 @@
                     </a>
 
                     <ul class="dropdown-menu text-small" style="">
+                        <li><a class="dropdown-item" th:href="@{/admin}">Администраторская</a></li>
                         <li><a class="dropdown-item" th:href="@{/admin/news}">Работа с новостями</a></li>
                         <li><a class="dropdown-item" th:href="@{/admin/catalog}">Работа с категориями</a></li>
                         <li><a class="dropdown-item" th:href="@{/admin/products}">Работа с продуктами</a></li>
