--- a/src/main/resources/templates/catalog/menu.html
+++ b/src/main/resources/templates/catalog/menu.html
@@ -28,7 +28,7 @@
                   </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                  <img th:src="'data:image/png;base64,' + ${cat.getImage()}" width="200px" height="200px"/>
+                  <img th:src="'data:image/png;base64,' + ${cat.getImage()}" width="100%" height="225"/>
                 </div>
               </div>
               <br>
@@ -47,7 +47,7 @@
                   </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                  <img th:src="'data:image/png;base64,' + ${category.getImage()}" width="200px" height="200px"/>
+                  <img th:src="'data:image/png;base64,' + ${category.getImage()}" width="100%" height="225"/>
                 </div>
               </div>
               <br>
