--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -60,7 +60,7 @@
                                     </a>
                                 </div>
                                 <div class="col-auto d-none d-lg-block">
-                                    <img th:src="'data:image/png;base64,' + ${news.getImage()}" width="200px" height="200px"/>
+                                    <img th:src="'data:image/png;base64,' + ${news.getImage()}" width="100%" height="225"/>
                                 </div>
                             </div>
                             <br>
