--- a/src/main/resources/templates/catalog/list.html
+++ b/src/main/resources/templates/catalog/list.html
@@ -12,41 +12,6 @@
         <header th:insert="~{blocks/header}"></header>
         <nav th:insert="~{blocks/nav}"></nav>
         <main>
-            <!--<h2 th:text="${category.getName()}"></h2>
-            <p th:text="${category.getDescription()}"></p>
-            <p><a th:href="@{/catalog/menu}">Вернуться</a></p>
-
-            <div th:if="${pageTotal}!=0">
-                <a th:href="@{/catalog/menu/list/0}" th:if="${pageNumber}!=0 and ${pageNumber}!=1">1 ...</a>
-                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageNumber-1})}" th:text="${pageNumber}" th:if="${pageNumber} != 0"></a>
-                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageNumber})}" th:text="${pageNumber+1}"></a>
-                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageNumber+1})}" th:text="${pageNumber+2}" th:if="${pageNumber} != ${pageTotal-1}"></a>
-                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageTotal-1})}" th:text="'... ' + ${pageTotal}" th:if="${pageNumber} != ${pageTotal-1} and ${pageNumber} != ${pageTotal-2}"></a>
-            </div>
-
-            <div th:each="product : ${products}">
-                <hr>
-                <a th:href="@{/catalog/{menuNum}/{productNum}(menuNum=${category.getId()},productNum=${product.getId()})}">
-                    <img th:src="'data:image/png;base64,' + ${product.getImage()}" width="100px" height="100px"/>
-                    <p>
-                        <b>
-                            <span th:text="${product.getName()}"></span>
-                            <span th:text="'Цена: ' + ${product.getCoast()}"></span>
-                        </b>
-                    </p>
-                </a>
-                <hr>
-            </div>
-
-            <div th:if="${pageTotal}!=0">
-                <a th:href="@{/catalog/menu/list/0}" th:if="${pageNumber}!=0 and ${pageNumber}!=1">1 ...</a>
-                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageNumber-1})}" th:text="${pageNumber}" th:if="${pageNumber} != 0"></a>
-                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageNumber})}" th:text="${pageNumber+1}"></a>
-                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageNumber+1})}" th:text="${pageNumber+2}" th:if="${pageNumber} != ${pageTotal-1}"></a>
-                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageTotal-1})}" th:text="'... ' + ${pageTotal}" th:if="${pageNumber} != ${pageTotal-1} and ${pageNumber} != ${pageTotal-2}"></a>
-            </div>
-            <p><a th:href="@{/catalog/menu}">Вернуться</a></p>-->
-
             <div class="d-flex gap-2 justify-content-center py-5" th:if="${pageTotal}!=0">
                 <a th:href="@{/catalog/menu}">
                     <button class="btn btn-outline-secondary d-inline-flex align-items-center" type="button" th:text="Вернуться">
@@ -100,7 +65,7 @@
                                                 <button type="button" class="btn btn-sm btn-outline-secondary">Описание</button>
                                             </a>
                                         </div>
-                                        <small class="text-body-secondary" th:text="'Цена: ' + ${product.getCoast()}"></small>
+                                        <b><small class="text-body-secondary" th:text="'Цена: ' + ${product.getCoast()}"></small></b>
                                     </div>
                                 </div>
                             </div>
